@@ -1,6 +1,7 @@
 Aug 19, 2025
   loader: discontinued/secondary genes are no longer updated in RGD
-
+  scripts: added blackrat
+  
 Jul 14, 2025
   parser: discontinued db logging of queries to eutils
 
